modify g1gc